# lilys-innovations

./: LICENSE.md  README.md  lilys-innovations.ftl  mvloc.config.jsonc  pyproject.toml
auxfiles-ru/data/: text-ru.xml.append
locale-machine/data/blueprints.xml.append/: fr.po  ja.po
locale-machine/data/events_addon_icon.xml.append/: fr.po  ja.po
locale-machine/data/events_sector_harmony.xml.append/: fr.po  ja.po
locale-machine/data/events_special_boons.xml.append/: fr.po  ja.po
locale-machine/data/events_special_main.xml.append/: fr.po  ja.po
locale-machine/data/events_special_multiverse.xml.append/: fr.po  ja.po
locale-machine/data/events_special_storage.xml.append/: fr.po  ja.po
locale-machine/data/hyperspace.xml.append/: fr.po  ja.po
locale-machine/data/text_misc.xml.append/: fr.po  ja.po
locale-machine/data/text_tooltips.xml.append/: fr.po  ja.po
locale-machine/mod-appendix/metadata.xml/: ja.po
machine-json/: machine-fr-1.8.2.json  machine-fr-1.8.5.json  machine-ja-1.7.2.json  machine-ja-1.8.2.json  machine-ja-1.8.5.json
src-en/data/: animations.xml.append  autoBlueprints.xml.append  blueprints.append.lua  blueprints.xml.append  events.xml.append  events_addon_icon.xml.append  events_sector_harmony.xml.append  events_special_boons.xml.append  events_special_main.xml.append  events_special_multiverse.xml.append  events_special_storage.xml.append  hyperspace.xml.append  rooms.xml.append  sector_data.xml.append  sounds.xml.append  text_misc.xml.append  text_tooltips.xml.append
src-en/mod-appendix/: metadata.xml
(+61 files in other folders)
